--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular-route.min.js"></script>
   <script type="text/javascript" src="app.js"></script>
 </head>
-<body ng-app="weatherApp">
+<body ng-app="weatherApp" id="img">
     <div ng-view></div>
  </body>
 </html>
